<resources>
    <string name="app_name">Caesar Chiper</string>

    <string name="action_settings">Settings</string>
    <string name="label_plain_text_input">Plain Text</string>
    <string name="hint_plain_text_input">Masukkan plain text</string>
    <string name="hint_chiper_text_input">Masukkan chiper text</string>
    <string name="button_enkripsi">Enkripsi</string>
    <string name="label_chiper_text">Chiper Text</string>
    <string name="title_activity_main">Caesar Chiper</string>
    <string name="text_output_enkripsi"></string>
    <string name="button_dekripsi">Dekripsi</string>
    <string name="text_output_dekripsi"></string>

</resources>
